--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Smooth Expand/Collapse RecyclerView</string>
     <string name="more_info">More Information</string>
     <string name="less_info">Less Information</string>
-    <string name="title">Lorem IPsum</string>
+    <string name="title">An another Application name</string>
     <string name="ezreal">An example Application name</string>
     <string name="ezreal_label">Short description: Lorem ipsum dolor sit amet...</string>
     <string name="ezreal_story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet ligula sem. Nulla nisi elit, cursus faucibus nisl sed,
